Added sound alarm
Added mp3 playback on alarm ding

--- a/src/views/OutTimeHome.mxml
+++ b/src/views/OutTimeHome.mxml
@@ -142,7 +142,8 @@
 			
 			protected function showEnd(e:TimerEvent):void {
 				this.currentState = "end";
-				trace("ding!");
+				var sound:Sound = new Sound(new URLRequest("assets/ding.mp3"));
+				sound.play();
 			}
 
 		]]>
